[gd_scene load_steps=4 format=3 uid="uid://lgrvj01d1xwi"]

[ext_resource type="PackedScene" uid="uid://cim7s3ldpnh8t" path="res://scenes/HUD/HUDPanel.tscn" id="1_tliqr"]
[ext_resource type="Script" path="res://scenes/HUD/HeatManagementPanel.gd" id="2_frbv2"]
[ext_resource type="PackedScene" uid="uid://b27npb3ogsdvp" path="res://scenes/HUD/SystemHeatMeter.tscn" id="2_upvy8"]

[node name="HeatManagementPanel" node_paths=PackedStringArray("heat_meter_container") instance=ExtResource("1_tliqr")]
script = ExtResource("2_frbv2")
coolant_reserve = 10
overall_heat_level = 7
heat_change_time = 20.0
heat_change_randomness = 20.0
heat_meter_container = NodePath("MarginContainer/Control/HBoxContainer/HBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/HBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CoolantLabel" type="Label" parent="MarginContainer/Control/HBoxContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(186, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Coolant
Control
Reserve: 1"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Control/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="FlushButton" type="Button" parent="MarginContainer/Control/HBoxContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = " Flush "

[node name="Spacer" type="Control" parent="MarginContainer/Control/HBoxContainer/VBoxContainer" index="3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tooltip" type="Label" parent="MarginContainer/Control/HBoxContainer/VBoxContainer" index="4"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Assigning coolant to systems
will lower their temperature
over time, but the pumps 
increase the ship's drift.

Flushing permanently removes 
one unit of coolant, and cuts
system temperatures in half."
mouse_filter = 0
mouse_default_cursor_shape = 16
theme_type_variation = &"GameTipLabel"
text = "?"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SystemHeatMeter" parent="MarginContainer/Control/HBoxContainer/HBoxContainer" index="0" instance=ExtResource("2_upvy8")]
layout_mode = 2
system_name = "Reactor"

[node name="SystemHeatMeter2" parent="MarginContainer/Control/HBoxContainer/HBoxContainer" index="1" instance=ExtResource("2_upvy8")]
layout_mode = 2
system_name = "Engine"

[node name="SystemHeatMeter3" parent="MarginContainer/Control/HBoxContainer/HBoxContainer" index="2" instance=ExtResource("2_upvy8")]
layout_mode = 2
system_name = "Hull"

[node name="HeatChangeTimer" type="Timer" parent="." index="4"]
one_shot = true
autostart = true

[node name="TickTimer" type="Timer" parent="." index="6"]
wait_time = 0.5
autostart = true

[node name="FlushCooldownTimer" type="Timer" parent="." index="7"]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/VBoxContainer/FlushButton" to="." method="_on_flush_button_pressed"]
[connection signal="timeout" from="HeatChangeTimer" to="." method="_on_heat_change_timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
[connection signal="timeout" from="FlushCooldownTimer" to="." method="_on_flush_cooldown_timer_timeout"]
